--- a/app/design/frontend/creo/default/template/email/order/items/shipment/default.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items/shipment/default.phtml
@@ -25,25 +25,29 @@
  */
 ?>
 <?php $_item = $this->getItem() ?>
+<?php $_order = $this->getItem()->getOrder() ?>
+
 <tbody>
     <tr>
-        <td class="cell-content product-info">
-            <p class="product-name"><?php echo $this->escapeHtml($_item->getName()) ?></p>
-            <?php if ($this->getItemOptions()): ?>
-                <dl style="margin:0; padding:0;">
-                    <?php foreach ($this->getItemOptions() as $option): ?>
-                        <dt><strong><em><?php echo $option['label'] ?></em></strong></dt>
-                        <dd style="margin:0; padding:0 0 0 9px;"><?php echo nl2br($option['value']) ?></dd>
-                    <?php endforeach; ?>
-                </dl>
-            <?php endif; ?>
-            <?php $addInfoBlock = $this->getProductAdditionalInformationBlock(); ?>
-            <?php if ($addInfoBlock) :?>
-                <?php echo $addInfoBlock->setItem($_item->getOrderItem())->toHtml(); ?>
-            <?php endif; ?>
-            <?php echo $this->escapeHtml($_item->getDescription()) ?>
+        <td style="border-bottom: 1px solid #c2c2c2; padding:10px;">
+            <?php $product = Mage::getModel('catalog/product')->setStoreId($_item->getOrder()->getStoreId())
+				  ->load($_item->getProductId()); ?>
+		 	<img src="<?php echo Mage::helper('catalog/image')->init($product, 'image'); ?>" width="130" height="160" alt="" />
         </td>
-        <td class="cell-content align-center"><?php echo $this->escapeHtml($this->getSku($_item)) ?></td>
-        <td class="cell-content align-right"><?php echo $_item->getQty()*1 ?></td>
-    </tr>
+        <td style="border-bottom: 1px solid #c2c2c2; padding:10px;">
+			<h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $this->escapeHtml($_item->getName()) ?>
+            </h2>
+            </td>
+        <td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $this->escapeHtml($this->getSku($_item)) ?></h2>
+        </td>
+		<?php if ($this->getItemOptions()): ?>
+        <?php foreach ($this->getItemOptions() as $option): ?>
+			<?php if( $option['label'] == 'Color' || $option['label'] == 'Size' ) : ?>
+				<td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo nl2br($option['value']) ?></h2>
+                </td>
+			<?php endif; ?>
+		<?php endforeach; ?>
+		<?php endif; ?>
+		<td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_item->getQty()*1 ?></h2></td>
+        </tr>
 </tbody>
