--- a/app/design/frontend/creo/default/layout/review.xml
+++ b/app/design/frontend/creo/default/layout/review.xml
@@ -78,13 +78,18 @@ Product reviews page
 -->
 
     <review_product_list translate="label">
+         <reference name="head">
+            <action method="addCss"><stylesheet>css/styles.css</stylesheet></action>
+        </reference>
         <label>Catalog Product Reviews List</label>
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
         <reference name="head">
             <action method="addJs"><script>varien/product.js</script></action>
             <action method="addJs"><script>varien/configurable.js</script></action>
+            
+                <action method="removeItem"><type>skin_js</type><name>js/app.js</name></action>
         </reference>
         <reference name="content">
             <block type="review/product_view" name="product.info" template="catalog/product/view.phtml">
