--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4269,6 +4269,26 @@ p.availability{margin: 0;}
 .faq-area .faq-frame.terms .openeer-holder .question{width: 98%;}
 .faq-area .faq-frame.terms .openeer-holder .arrow{width: 2%;}
 .faq-area .faq-frame.terms .open-close2 h5 {text-transform: uppercase;}
+#header .cart .slide::before {
+    bottom: 100%;
+    content: "";
+    height: 10px;
+    left: 0;
+    position: absolute;
+    right: 0;
+}
+.review-product-list .product-detail .options-area,
+.review-product-list .product-detail .shipping-area{display: none;}
+.review-product-list .product-detail .text-area{border-bottom: 1px solid #000;}
+
+
+
+
+
+
+
+
+
 
 
 
