--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -1,5 +1,200 @@
-<!--@subject Email - Footer @-->
-                    <!-- End Content -->
+<tr>
+<td class="three-column test" style=" border-bottom: 6px solid #e1e1e1;">
+        <!--[if (gte mso 9)|(IE)]>
+        <table width="100%">
+        <tr>
+        <td width="263px" valign="top">
+        <![endif]-->
+        <table  style=" width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+      <h2 class="h" style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
+    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;"> talk to us</h2>
+      </td>
+      </tr>
+      <tr>
+      <td>
+      <ul class="list1">
+      <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img src="{{skin url="images/icon1.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_phone}}</a></li>
+      <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon2.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_email}}</a></li>
+      <li style="margin-bottom: 10px;"><a href="#" style="font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none; "><img src="{{skin url="images/icon3.png" _area='frontend'}}" style="padding-right: 5px;">Saturday to Thursday</a></li>
+      <li style="margin-bottom: 10px;"><a href="#" style=" font-family: 'Roboto Condensed', sans-serif;font-size: 17px;color: #000; text-decoration: none;"><img src="{{skin url="images/icon4.png" _area='frontend'}}" style="padding-right: 5px;">{{var store_hours}}</a></li>
+        </ul>
+      </td>
+      </tr>
+        </table >
+        <!--[if (gte mso 9)|(IE)]>
+        </td><td width="263px" valign="top">
+        <![endif]-->
+        <table style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+     <h2  style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
+    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;">FIND US ON MOBILE</h2>
+     </td>
+     </tr>
+     <tr>
+     <td>
+    <ul class="list2" style="    margin-top: 10px;">
+      <li><a href="#"><img src="{{skin url="images/app.png" _area='frontend'}}" style=" margin-bottom: 10px;"></a></li>
+      <li><a href="#"><img src="{{skin url="images/googleapp.png" _area='frontend'}}" style=" margin-bottom: 10px; "></a></li>
+    </ul>
+      </td>
+      </tr>
+        </table>
+        <!--[if (gte mso 9)|(IE)]>
+        </td><td width="263px" valign="top">
+        <![endif]-->
+        <table  style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+     <h2  style="border: 2px solid rgb(225, 225, 225); text-align: center; text-transform: uppercase;
+    color: rgb(0, 0, 0);font-family: 'Roboto Condensed', sans-serif; font-weight: bold; font-size: 18px; padding: 5px 0; width: 250px;">SOCIALIZE WITH US</h2>
+     </td>
+     </tr>
+     <tr class="table-images">
+     <td>
+        <a href="#"><img src="{{skin url="images/fb.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a>
+        <a href="#"><img src="{{skin url="images/tweet.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a>
+        <a href="#"><img src="{{skin url="images/inta.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a>
+      <a href="#"><img src="{{skin url="images/pin.png" _area='frontend'}}" style="padding:15px;     margin-top: 10%;"></a>
+      </td>
+      </tr>
+        </table>
+        <!--[if (gte mso 9)|(IE)]>
+        </td>
+        </tr>
+        </table>
+        <![endif]-->
+    </td>
+</tr>
+<td class="three-column section3" style=" padding-bottom: 0;">
+        <!--[if (gte mso 9)|(IE)]>
+        <table width="100%">
+        <tr>
+        <td width="263px" valign="top">
+        <![endif]-->
+        <table  style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+      <h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">Customize Your Products</h3>
+   <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);">Get Creative nd customize your own
+   product within our site. Be your own designer.</p>
+      </td>
+      </tr>
+        </table >
+        <!--[if (gte mso 9)|(IE)]>
+        </td><td width="263px" valign="top">
+        <![endif]-->
+        <table style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+      <h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">Free Express Delivery</h3>
+   <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);
+    }">Next Day deliver within the UAE
+   Ship globaly within 3 – 4 working days.</p>
+      </td>
+      </tr>
+        </table>
+        <!--[if (gte mso 9)|(IE)]>
+        </td><td width="263px" valign="top">
+        <![endif]-->
+        <table  style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+     <h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">Free Exchange</h3>
+   <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);
+    }">You didn’t like it? Exchange it
+    within 14 days</p>
+      </td>
+      </tr>
+        </table>
+        <!--[if (gte mso 9)|(IE)]>
+        </td>
+        </tr>
+        </table>
+        <![endif]-->
+    </td>
+</tr>
+<td class="three-column section3 border" style="border-bottom: 1px solid #c2c2c2; margin-top: 0;padding-top: 0;">
+        <!--[if (gte mso 9)|(IE)]>
+        <table width="100%">
+        <tr>
+        <td width="200" valign="top">
+        <![endif]-->
+        <table  style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+   <h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">Largest Designed Collection</h3>
+   <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);
+    }">Shop more than 1000 customized designs
+   to fit your crazy personality</p>
+      </td>
+      </tr>
+        </table >
+        <!--[if (gte mso 9)|(IE)]>
+        </td><td width="200" valign="top">
+        <![endif]-->
+        <table style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+   <h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">Easy and Secure Payment</h3>
+   <p style="font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 16px;padding: 0 20px;color: rgb(0, 0, 0);
+    }">Cash on delivery. Credit card. Paypal.</p>
+      </td>
+      </tr>
+        </table>
+        <!--[if (gte mso 9)|(IE)]>
+        </td><td width="200" valign="top">
+        <![endif]-->
+        <table style="width: 100%; max-width: 263px; display: inline-block; vertical-align: top; text-align: center;">
+        <tr>
+      <td>
+   <h3 style="text-align: center;text-transform: capitalize;color: #ef4f61;font-family: 'Roboto Condensed', sans-serif;font-weight: normal;font-size: 17px;text-decoration: underline;">We deliver Everywhere</h3>
+   <p>We deliver around the world
+   Get it anywhere and everyday.</p>
+      </td>
+      </tr>
+        </table>
+        <!--[if (gte mso 9)|(IE)]>
+        </td>
+        </tr>
+        </table>
+        <![endif]-->
+    </td>
+</tr>
+<tr>
+<td>
+  <table width="100%" class="section4">
+            <tr>
+              <td>
+                <p style="font-family: 'Roboto Condensed', sans-serif; font-size: 12px; padding: 0 20px; color: rgb(0, 0, 0); text-align: center; margin-bottom: 15px;">*Free Delivery in United Arab Emirates. Free delivery on orders over 200 SAR for GCC countries. CREO ships to you across the GCC  (United Arab Emirates, Saudi Arabia, Kuwait, Qatar, Oman and Bahrain).
+          We do our best to do next day deliver within the UAE, and we deliver within 2-3 days globally. We accept credit card payments, Cash on Delivery and Paypal.  </p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+          <p style="font-family: 'Roboto Condensed', sans-serif; font-size: 12px; padding: 0 20px; color: rgb(0, 0, 0); text-align: center; margin-bottom: 25px;">We are hear to help you, drop us a live at <a href="#">{{var store_email}}</a> or give us a call at 800-84743 (Toll-Free within UAE) and {{var store_phone}}(international)
+          Imprint: Creative Room Gift Items LLC P.O. Box: 34135 - Bur Dubai
+          Please complete our short survey to help us improve our emails! <a href="#"> Click here.</a>
+          We hope you find this message useful. You're receiving this e-mail because you signed up for CREO newsletter
+          </p>
+              </td>
+            </tr>
+  </table>
+ </td>
+ </tr>
+</table>
+<!--[if (gte mso 9)|(IE)]>
+</td>
+</tr>
+</table>
+<![endif]-->
+
+
+
+
+<!-- End Content -->
                     </td>
                 </tr>
             </table>
@@ -9,3 +204,4 @@
 </table>
 <!-- End wrapper table -->
 </body>
+</html>
