--- a/app/locale/en_US/template/email/html/header.html
+++ b/app/locale/en_US/template/email/html/header.html
@@ -1,45 +1,58 @@
-<!--@subject Email - Header @-->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!--  main stylesheet -->
+<!--  <link rel="stylesheet" href="style.css">
+ -->  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
+ <style>
+ul{
+  margin: 0;
+  padding: 0;
+}
+li{
+  list-style: none;
+}
+table{
+  border-spacing: 0;
+}
+
+/*Three column layout*/
+.three-column {
+/*    font-size: 0;
+*/    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.three-column .text {
+    padding-top: 10px;
+}
+
+
+
+/*Media Queries*/
+@media screen and (max-width: 400px) {
+.two-column .column,
+    .three-column .column {
+        max-width: 100% !important;
+    }
+}
+@media screen and (min-width: 401px) and (max-width: 620px) {
+.three-column .column {
+        max-width: 100% !important;
+    }
+    .two-column .column {
+        max-width: 50% !important;
+    }
+}
+
+</style>
 </head>
 <body>
-{{var non_inline_styles}}
-<!-- Begin wrapper table -->
-<table width="100%" cellpadding="0" cellspacing="0" border="0" id="background-table">
-    <tr>
-        <td valign="top" class="container-td" align="center">
-            <table cellpadding="0" cellspacing="0" border="0" align="center" class="container-table">
-                <tr>
-                    <td>
-                        <table cellpadding="0" cellspacing="0" border="0" class="logo-container">
-                            <tr>
-                                <td class="logo">
-                                    <a href="{{store url=""}}">
-                                        <img
-                                            {{if logo_width}}
-                                            width="{{var logo_width}}"
-                                            {{else}}
-                                            width="165"
-                                            {{/if}}
-
-                                            {{if logo_height}}
-                                            height="{{var logo_height}}"
-                                            {{else}}
-                                            height="48"
-                                            {{/if}}
-
-                                            src="{{var logo_url}}"
-                                            alt="{{var logo_alt}}"
-                                            border="0"/>
-                                    </a>
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-                <tr>
-                    <td valign="top" class="top-content">
-                    <!-- Begin Content -->
