invoice email temaplte setting

--- a/app/design/frontend/creo/default/template/email/order/items.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items.phtml
@@ -77,7 +77,7 @@
     </tr>
     <tr>
         <td>
-            <?php //echo $this->getChildHtml('order_totals') ?>
+            <?php echo $this->getChildHtml('order_totals') ?>
         </td>
     </tr>
     <?php if ($this->helper('giftmessage/message')->isMessagesAvailable('order', $_order, $_order->getStore()) && $_order->getGiftMessageId()): ?>
