Removed hard protocol link for facebook connect.

--- a/app/design/frontend/creo/default/template/fblogin/bt_fblogin.phtml
+++ b/app/design/frontend/creo/default/template/fblogin/bt_fblogin.phtml
@@ -12,7 +12,7 @@
             </a>
         <?php }?>
     </div>
-    <script src="http://connect.facebook.net/en_US/all.js"></script>
+    <script src="//connect.facebook.net/en_US/all.js"></script>
 	<script type="text/javascript">
 		<?php if (!$user) { ?>
 		var newwindow;
