--- a/app/design/frontend/creo/default/template/fblogin/fblogin.phtml
+++ b/app/design/frontend/creo/default/template/fblogin/fblogin.phtml
@@ -35,8 +35,7 @@
         </div>
     </div>
 </div><?php */?>
-
-<script src="http://connect.facebook.net/en_US/all.js"></script>
+<script src="//connect.facebook.net/en_US/all.js"></script>
 <script type="text/javascript">
 <?php if (!$user) { ?>
 var newwindow;
