--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -1434,10 +1434,11 @@ input[type="submit"]:hover {
 	display:inline-block;
 	vertical-align:middle;
 	margin:0 22px 0 0;
+	max-width: 610px;
 }
 .cate-links ul{
 	margin:0;
-	padding:0;
+	padding:2px 0 0;
 	list-style:none;
 	font: 12px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
@@ -1697,7 +1698,6 @@ div.fme-filter dd li{overflow: visible !important;}
 	position: relative;
 	text-align: center;
 	display: block;
-	margin: 0 0 15px;
 	overflow:hidden;
 }
 .products-grid img{
@@ -1722,11 +1722,17 @@ div.fme-filter dd li{overflow: visible !important;}
 	font:16px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
 .products-grid .text-area{
-	overflow: hidden;
+	position: relative;
+	padding: 15px 0 0;
+}
+.products-grid .text-area:after{
+	display: block;
+	clear: both;
+	content: '';
 }
 .products-grid .text-area h3{
 	float: left;
-	width: 60%;
+	width: 70%;
 	/*min-height:40px;*/
 	margin: 0;
 	text-transform: capitalize;
@@ -1736,17 +1742,16 @@ div.fme-filter dd li{overflow: visible !important;}
 .products-grid .text-area h3 a{color: #222;}
 .products-grid .text-area .price{
 	display: block;
-	margin: 0 0 10px;
+	margin: 0 0 0 2%;
 	color: #000;
 	float: right;
 	text-align: right;
-	width: 40%;
+	width: 28%;
 	font:18px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
 .products-grid .btn-holder {
 	overflow: hidden;
 	text-align: center;
-	padding: 10px 0 0;
 	clear: both;
 }
 .products-grid .btn-holder a {
@@ -4377,7 +4382,6 @@ textarea {
 	#footer .footer-nav li:before{left: -9px;}
 	.cart-table-area td:first-child{padding-left: 30px;}
 	.faq-area .openeer-holder .question{width: 93%;}
-	.products-grid .text-area .price{font: 18px/30px "Roboto Condensed",Helvetica,Arial,sans-serif;}
 	.products-grid .btn-holder a:first-child .span1{padding: 0 5px 0 0;}
 	.products-grid .btn-holder a:first-child{width: 24%;}
 	.products-grid .btn-holder a{width: 74%;}
@@ -4386,7 +4390,6 @@ textarea {
 	.products-grid .mp_quickview_icon{top: 260px !important;}
 	.subscribe-form.footer-form .button.newslettersubscribe{width: 57px !important;}
 	.product-detail .btn-holder button:first-child{width: 80.4%;}
-	.products-grid li.item .btn-holder{bottom: 54px !important;}
 }
 @media only screen and (max-width: 991px) {
 	#wrapper > .container{padding: 0 15px;}
@@ -4454,6 +4457,12 @@ textarea {
 	.products-grid .mp_quickview_icon {top: 199px !important;}
 	.product-detail .btn-holder button:first-child{width: 79.8%;}
 	.faq-area .faq-frame.terms .openeer-holder .question {width: 97.4%;}
+	.products-grid .text-area h3{font: 14px/16px "Roboto Condensed",Helvetica,Arial,sans-serif;}
+	.products-grid .text-area .price {font: 14px/16px "Roboto Condensed",Helvetica,Arial,sans-serif;}
+	.products-grid .text-area{padding: 10px 0 0;}
+	.styles-lable{right: 216px !important;}
+	#fme_layered_gender {margin-right:20px  !important;}
+	.cate-links .actions {margin: 6px 0 0 6px !important;}
 }
 @media only screen and (max-width: 767px) {
 	body { min-width: 768px; }
