--- a/app/design/frontend/creo/default/template/email/order/items.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items.phtml
@@ -35,14 +35,7 @@
             <table class="items" cellpadding="0" cellspacing="0" border="0">
             <thead>
                 <tr>
-                <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;  margin:4px;"> <span style='display: block; ' >Product</span></a></td>
-                <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;  margin:4px;"> <span style='display: block; ' >Description</span></a></td>
-                <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;margin: 4px;"> <span style='display: block; ' >
-                Sku</span></a></td>
-                <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;margin: 4px;"> <span style='display: block; ' >
-                Color</span></a></td>
-                <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;margin: 4px;"> <span style='display: block; ' >
-                Size</span></a></td>
+                <td style="min-width: 80%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;  margin:4px;"> <span style='display: block; ' >Product Description</span></a></td>
                 <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;  margin: 4px;"> <span style='display: block; ' >
                 Quantity</span></a></td>
                 <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase; margin: 4px;"> <span style='display: block;' >Price</span></a></td>
@@ -76,8 +69,8 @@
         </td>
     </tr>
     <tr>
-        <td>
-            <?php echo $this->getChildHtml('order_totals') ?>
+        <td style="min-width: 20%; overflow: hidden; padding: 4px;"><a href="#" style="font:18px/30px 'Roboto Condensed', sans-serif; background:#000; display:block; color:#fff; text-decoration:none; text-transform: uppercase;  margin: 4px;"> <span style='display: block; ' >
+            <?php echo $this->getChildHtml('order_totals') ?></span></a>
         </td>
     </tr>
     <?php if ($this->helper('giftmessage/message')->isMessagesAvailable('order', $_order, $_order->getStore()) && $_order->getGiftMessageId()): ?>
