--- a/app/design/frontend/creo/default/template/email/order/items/shipment/default.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items/shipment/default.phtml
@@ -54,7 +54,7 @@
                 <?php echo $this->escapeHtml($_item->getDescription()) ?>
         	</div>
         </td>
-		<td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_item->getQtyOrdered()*1 ?></h2></td>
+		<td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_item->getQty()*1 ?></h2></td>
         </tr>
     <?php if ($_item->getGiftMessageId() && $_giftMessage = $this->helper('giftmessage/message')->getGiftMessage($_item->getGiftMessageId())): ?>
         <tr>
