--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -46,7 +46,7 @@
 	                     </div>
 			        </div>
 			     <div class="col right-area col-lg-5 col-md-5 col-sm-4 col-xs-4">
-			            <div class="open-close cart">
+			            <div class="open-close3 cart">
 							<a href="javascript:void(0)" class="opener"><span class="count">
 								<?php 
                         $_cartQty = Mage::getSingleton('checkout/cart')->getItemsCount();
