--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -169,7 +169,7 @@ $count = 0;?>
     <li><a href="<?php echo  Mage::getModel('catalog/category')->load(47)->getUrl(); ?>">CREATE</a></li><?php */?>
 
 <li class="active"><a href="<?php echo  Mage::getBaseUrl(); ?>">Home</a></li>
-<li> <a href="#">CLOTHING</a>
+<li> <a href="javascript:void(0)">CLOTHING</a>
   <div class="drop">
     <div class="links-area">
       <h2>MEN &amp; WOMEN</h2>
@@ -231,7 +231,7 @@ $count = 0;?>
     </div>
   </div>
 </li>
-<li> <a href="#">ACCESSORIES</a>
+<li> <a href="javascript:void(0)">ACCESSORIES</a>
   <div class="drop"> 
      <div class="links-area">
       <h2>MEN &amp; WOMEN</h2>
@@ -276,7 +276,7 @@ $count = 0;?>
   
   </div>
 </li>
-<li><a href="#">CAPS</a>
+<li><a href="javascript:void(0)">CAPS</a>
 <div class="drop">
     <div class="links-area">
       <h2>MEN &amp; WOMEN</h2>
@@ -320,7 +320,7 @@ $count = 0;?>
     </div>
   </div>
 </li>
-<li> <a href="#">CATEGORIES</a>
+<li> <a href="javascript:void(0)">CATEGORIES</a>
 
 
 <div class="drop">
