--- a/app/design/frontend/creo/default/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view/addtocart.phtml
@@ -60,9 +60,9 @@
 
         <div class="add-to-cart-buttons btn-holder">
 			<?php if($_isCustomizeProduct) : ?>
-            <button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="return designYourOwnPopupValidation();PDC_Actions.saveDesignBeforeAddToCart(); return false; productAddToCartForm.submit(this)"><span class="span1"><span class="span2"><?php echo $buttonTitle ?></span></span></button>
+            <button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="var ret = designYourOwnPopupValidation(); if(ret == false){return false;} PDC_Actions.saveDesignBeforeAddToCart(); return false; productAddToCartForm.submit(this)"><span class="span1"><span class="span2"><?php echo $buttonTitle ?></span></span></button>
             <?php else : ?>
-			<button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="return designYourOwnPopupValidation; productAddToCartForm.submit(this)"><span class="span1"><span class="span2"><?php echo $buttonTitle ?></span></span></button>
+			<button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="var ret = designYourOwnPopupValidation(); if(ret == false){return false;} productAddToCartForm.submit(this)"><span class="span1"><span class="span2"><?php echo $buttonTitle ?></span></span></button>
 			<?php endif; ?>
             <?php $_wishlistSubmitUrl = $this->helper('wishlist')->getAddUrl($_product); ?>
 		<?php if ($this->helper('wishlist')->isAllow()) : ?>
