--- a/app/design/frontend/creo/default/template/checkout/onepage/link.phtml
+++ b/app/design/frontend/creo/default/template/checkout/onepage/link.phtml
@@ -27,7 +27,7 @@
 <?php if ($this->isPossibleOnepageCheckout()):?>
 <?php /*?><a href="<?php echo $this->getCheckoutUrl() ?>" onclick="window.location='<?php echo $this->getCheckoutUrl() ?>';"> <?php echo $this->__('PROCEED TO CHECKOUT') ?></a>
 <?php */?>    
-<button type="button" title="<?php echo $this->__('Proceed to Checkout') ?>" class="button btn-proceed-checkout btn-checkout<?php if ($this->isDisabled()):?> no-checkout<?php endif; ?>"<?php if ($this->isDisabled()):?> disabled="disabled"<?php endif; ?> onclick="setLocation('<?php echo $this->getCheckoutUrl() ?>');"><span><span><?php echo $this->__('Proceed to Checkout') ?></span></span></button>
+<button type="button" title="<?php echo $this->__('Proceed to Checkout') ?>" class="button btn-proceed-checkout btn-checkout<?php if ($this->isDisabled()):?> no-checkout<?php endif; ?>"<?php if ($this->isDisabled()):?> disabled="disabled"<?php endif; ?> onclick="setLocation('<?php echo Mage::getUrl('checkout/onepagecheckout'); ?>');"><span><span><?php echo $this->__('Proceed to Checkout') ?></span></span></button>
 
 
 
