Fixed active menu item issue

--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -187,9 +187,9 @@
   </ul>
   <script type="text/javascript">decorateGeneric($$('ul.products-grid'), ['odd','even','first','last'])</script>
   <?php endif; ?>
-  <?php /*?><div class="toolbar-bottom">
+  <?php ?><div class="toolbar-bottom">
         <?php echo $this->getToolbarHtml() ?>
-    </div><?php */?>
+    </div><?php ?>
 </div>
 <?php endif; ?>
 <?php
