--- a/app/design/frontend/creo/default/template/pdp/checkout/cart/additional/info.phtml
+++ b/app/design/frontend/creo/default/template/pdp/checkout/cart/additional/info.phtml
@@ -7,7 +7,8 @@ if(empty($images)) {
 	return;
 }
 ?>
-<dt><span style="font-weight: bold"><?php echo $this->__('Customize Design') ?></span></dt>
+</div>
+<h5><?php echo $this->__('Customized Design') ?></h5>
 <dl class="item-options pdp_cart_item">
 <?php foreach ($images as $image) : ?>
 	<dt><?php echo $this->__($image['name']) ?></dt>
