design guide table and infinit scroll

--- a/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/list.phtml
@@ -149,7 +149,7 @@ function setLocationAjax(url,id){
     <?php endif; ?>
 
     <div class="toolbar-bottom">
-        <?php //echo $this->getToolbarHtml() ?>
+        <?php echo $this->getToolbarHtml() ?>
     </div>
 </div>
 <?php endif; ?>
