--- a/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/toolbar.phtml
@@ -31,32 +31,38 @@
  * @see Mage_Catalog_Block_Product_List_Toolbar
  */
 ?>
-
-
 <?php if($this->getCollection()->getSize()): ?>
-	<div class="row">
-      
-						<div class="col sort-area col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                   <?php if( $this->isExpanded() ): ?>
-                     
-					<?php if( $this->isEnabledViewSwitcher() ): ?>
-                <p class="view-mode">
-                    <?php $_modes = $this->getModes(); ?>
-                    <?php if($_modes && count($_modes)>1): ?>
-                        <?php foreach ($this->getModes() as $_code=>$_label): ?>
-                            <?php if($this->isModeActive($_code)): ?>
-                                <strong title="<?php echo $_label ?>" class=" <?php echo strtolower($_code); ?>"><?php //echo $_label ?> </strong>
-                            <?php else: ?>
-                                <a href="<?php echo $this->getModeUrl($_code) ?>" title="<?php echo $_label ?>" class="<?php echo strtolower($_code); ?>"><?php //echo $_label ?> </a>
-                            <?php endif; ?>
-                        <?php endforeach; ?>
-                    <?php endif; ?>
-                </p>
-            <?php endif; ?>
-                     <?php endif; ?>
-							<div class="sort-by sortbyCustom">
-				                                
-                 <?php /*?> <label><?php echo $this->__('Sort By:') ?></label>
+
+<div class="row">
+  <div class="col sort-area col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <?php if( $this->isExpanded() ): ?>
+    <?php if( $this->isEnabledViewSwitcher() ): ?>
+    <p class="view-mode">
+      <?php $_modes = $this->getModes(); ?>
+      <?php if($_modes && count($_modes)>1): ?>
+      <?php foreach ($this->getModes() as $_code=>$_label): ?>
+      <?php if($this->isModeActive($_code)): ?>
+      <strong title="<?php echo $_label ?>" class=" <?php echo strtolower($_code); ?>">
+      <?php //echo $_label ?>
+      </strong>
+      <?php else: ?>
+      <a href="<?php echo $this->getModeUrl($_code) ?>" title="<?php echo $_label ?>" class="<?php echo strtolower($_code); ?>">
+      <?php //echo $_label ?>
+      </a>
+      <?php endif; ?>
+      <?php endforeach; ?>
+      <?php endif; ?>
+    </p>
+    <?php endif; ?>
+    <?php endif; ?>
+    
+         <div class="pagination paginationlistpage">
+                  <?php echo $this->getPagerHtml() ?>
+     </div>
+
+    
+    <div class="sort-by sortbyCustom">
+      <?php /*?> <label><?php echo $this->__('Sort By:') ?></label>
                   <select onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>">
                   <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
                   <option value="<?php echo $this->getOrderUrl($_key, 'asc') ?>"<?php if($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif; ?>>
@@ -64,43 +70,40 @@
                   </option>
                   <?php endforeach; ?>
                   </select><?php */?>
-                  
-                  
-                   <label><?php echo $this->__('Sort By:') ?></label>
-                   
-                  <div class=" sortbycontainer open-close">
-                      <a id="sortbyopener" class="" href="javascript:void(0)"><?php if($_GET['order']){echo ucfirst($_GET['order']);} else {echo "Position";} ?> </a>
-                   
-                  <ul onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>" class="slide sortbyUl js-slide-hidden" style="display: none;">
-                  <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
-                  <li<?php if($this->isOrderCurrent($_key)): ?> class="selected"<?php endif; ?>>
-                  <a href="<?php echo $this->getOrderUrl($_key, 'asc') ?>" >
-                  <?php echo $this->__($_order) ?>
-                  </a>
-                  </li>
-                  <?php endforeach; ?>
-                  </ul>
-                  </div>
-                                
-                                <!--<a class="sort-by-switcher" href="#"><i class="icon-sort-alt-down"></i></a>-->
-						<?php if($this->getCurrentDirection() == 'desc'): ?>
-                  <a href="<?php echo $this->getOrderUrl(null, 'asc') ?>" class="sort-by-switcher sort-by-switcher--desc" title="<?php echo $this->__('Set Ascending Direction') ?>"><?php //echo $this->__('Set Ascending Direction') ?></a>
-                  <?php else: ?>
-                  <a href="<?php echo $this->getOrderUrl(null, 'desc') ?>" class="sort-by-switcher sort-by-switcher--asc" title="<?php echo $this->__('Set Descending Direction') ?>"><?php //echo $this->__('Set Descending Direction') ?></a>
-                  <?php endif; ?>
-                            </div>
-                            <ul class="sort-items">
-										<?php foreach ($this->getAvailableLimit() as  $_key=>$_limit): ?>
-                              <li <?php if($this->isLimitCurrent($_key) == $_limit): ?> class="active" <?php endif ?>>
-                              <a href="<?php echo $this->getLimitUrl($_key) ?>" onClick="setLocation(this.value)"><?php echo $_limit ?> </a>
-                              </li>
-                              <?php endforeach; ?>
-                           
-                            </ul>
-                         </div>
-               </div>
-<?php endif ?>
+      <label><?php echo $this->__('Sort By:') ?></label>
+      <div class=" sortbycontainer open-close"> <a id="sortbyopener" class="" href="javascript:void(0)">
+        <?php if($_GET['order']){echo ucfirst($_GET['order']);} else {echo "Position";} ?>
+        </a>
+        <ul onchange="setLocation(this.value)" title="<?php echo $this->__('Sort By:') ?>" class="slide sortbyUl js-slide-hidden" style="display: none;">
+          <?php foreach($this->getAvailableOrders() as $_key=>$_order): ?>
+          <li<?php if($this->isOrderCurrent($_key)): ?> class="selected"<?php endif; ?>> <a href="<?php echo $this->getOrderUrl($_key, 'asc') ?>" > <?php echo $this->__($_order) ?> </a> </li>
+          <?php endforeach; ?>
+        </ul>
+      </div>
+      
+      <!--<a class="sort-by-switcher" href="#"><i class="icon-sort-alt-down"></i></a>-->
+      <?php if($this->getCurrentDirection() == 'desc'): ?>
+      <a href="<?php echo $this->getOrderUrl(null, 'asc') ?>" class="sort-by-switcher sort-by-switcher--desc" title="<?php echo $this->__('Set Ascending Direction') ?>">
+      <?php //echo $this->__('Set Ascending Direction') ?>
+      </a>
+      <?php else: ?>
+      <a href="<?php echo $this->getOrderUrl(null, 'desc') ?>" class="sort-by-switcher sort-by-switcher--asc" title="<?php echo $this->__('Set Descending Direction') ?>">
+      <?php //echo $this->__('Set Descending Direction') ?>
+      </a>
+      <?php endif; ?>
+    </div>
+    
+    <ul class="sort-items">
+      <?php foreach ($this->getAvailableLimit() as  $_key=>$_limit): ?>
+      <li <?php if($this->isLimitCurrent($_key) == $_limit): ?> class="active" <?php endif ?>> <a href="<?php echo $this->getLimitUrl($_key) ?>" onClick="setLocation(this.value)"><?php echo $_limit ?> </a> </li>
+      <?php endforeach; ?>
+    </ul>
+    
+    
+  </div>
+</div>
 
+<?php endif ?>
 <?php /*?>
 <?php if($this->getCollection()->getSize()): ?>
 <div class="toolbar">
@@ -169,7 +172,6 @@
 </div>
 <?php endif ?>
 <?php */?>
-
 <script>
     jQuery('#sortbyopener').click(function() {
         var sort_by_menu = jQuery( ".slide.sortbyUl" );
