desing guide and scroll

--- a/app/design/frontend/creo/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view.phtml
@@ -156,7 +156,8 @@
                       
                       <?php // j.work starts ?>
                       <div class="shipping-area"> 
-                      	<a class="shipping-info" href="#">Shipping Information</a>
+                      <h4 st> Shipping Information  </h4>
+                      	<!--<a class="shipping-info" href="#">Shipping Information</a>-->
                         <p><?php print $_product->getShippingDetails(); ?> </p>
                       </div>                      
 <!--                    <div class="shipping-area"> 
