--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1026,7 +1026,7 @@
     display: none;
 }*/
 
-
+.shipping-area h4 { margin-top: 0px;}
 /*design guide table*/
   table, th, td {
     border: 1px solid transparent;
